[package]
name = "scr_allocator"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bumpalo = { workspace = true, features = ["collections"] }
serde = { workspace = true }
