[package]
name = "scr_diagnostics"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
scr_ast = { path = "../scr_ast" }
miette = "5.5.0"
thiserror = "1.0.38"
